Meet not symmetric failure when running lucene on jdk8

XMLWordPrintable

    • b17

        During our testing we saw:

            [junit4] === Meet Not Symmetric ===
            [junit4] t = stable:narrowoop: org/apache/lucene/util/fst/Builder$Arc:TopPTR *,iid=top (inline_depth=InlineDepthTop)[int:max..0]:AnyNull:exact *,iid=top (inline_depth=-8)
            [junit4] this= stable:narrowoop: java/lang/Object:TopPTR *,iid=top (inline_depth=InlineDepthTop)[int:0]<ciObjArray length=0 type=<ciObjArrayKlass name=[Ljava/lang/Object; ident=885 address=0x00007f227840b8f0> ident=886 SCAVENGABLE
         address=0x00007f227840b9a0> *,iid=top (inline_depth=InlineDepthTop)
            [junit4] mt=(t meet this)= stable:narrowoop: org/apache/lucene/util/fst/Builder$Arc:TopPTR *,iid=top (inline_depth=InlineDepthTop)[int:0]:NotNull *
            [junit4] t_dual= narrowoop: org/apache/lucene/util/fst/Builder$Arc *[int:>=0]:NotNull:exact * (inline_depth=8)
            [junit4] this_dual= narrowoop: java/lang/Object *[int:0]<ciObjArray length=0 type=<ciObjArrayKlass name=[Ljava/lang/Object; ident=885 address=0x00007f227840b8f0> ident=886 SCAVENGABLE address=0x00007f227840b9a0> *
            [junit4] mt_dual= narrowoop: org/apache/lucene/util/fst/Builder$Arc *[int:0]:AnyNull *,iid=top (inline_depth=InlineDepthTop)
            [junit4] mt_dual meet t_dual= narrowoop: org/apache/lucene/util/fst/Builder$Arc *[int:>=0]:NotNull:exact * (inline_depth=8)
            [junit4] mt_dual meet this_dual= narrowoop: java/lang/Object *[int:0]:NotNull *
            [junit4] # To suppress the following error report, specify this argument
            [junit4] # after -XX: or in .hotspotrc: SuppressErrorAt=/type.cpp:713
            [junit4] #
            [junit4] # A fatal error has been detected by the Java Runtime Environment:
            [junit4] #
            [junit4] # Internal Error (/mnt/ramdisk/openjdk/hotspot/src/share/vm/opto/type.cpp:713), pid=18197, tid=0x00007f22a55e3700
            [junit4] # fatal error: meet not symmetric

              Assignee:
              Roland Westrelin
              Reporter:
              Roland Westrelin
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: