8240676: Meet not symmetric failure when running lucene on jdk8

Reviewed-by: kvn, thartmann